make c++ client check that rs master is ok before returning it SERVER-2377